Update .po files.

--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: audacious-plugins 1.5.1\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
-"POT-Creation-Date: 2011-03-06 14:40-0500\n"
+"POT-Creation-Date: 2011-03-08 11:07-0500\n"
 "PO-Revision-Date: 2009-04-11 16:07+0200\n"
 "Last-Translator: Ernest Adrogué <eadrogue@gmx.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -2719,7 +2719,7 @@ msgstr ""
 
 #: src/gtkui/ui_manager.c:138
 #, fuzzy
-msgid "Edites the playlist title."
+msgid "Edit the playlist title."
 msgstr "Reordena la llista de forma aleatòria."
 
 #: src/gtkui/ui_manager.c:141
