--- a/po/cy.po
+++ b/po/cy.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: audacious-plugins 1.3\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
-"POT-Creation-Date: 2011-03-06 14:40-0500\n"
+"POT-Creation-Date: 2011-03-08 11:07-0500\n"
 "PO-Revision-Date: 2007-02-12 03:37-0600\n"
 "Last-Translator: William Pitcock <nenolod@sacredspiral.co.uk>\n"
 "Language-Team: Welsh <i18n+cy@sacredspiral.co.uk>\n"
@@ -2599,7 +2599,7 @@ msgid "Edit title"
 msgstr ""
 
 #: src/gtkui/ui_manager.c:138
-msgid "Edites the playlist title."
+msgid "Edit the playlist title."
 msgstr ""
 
 #: src/gtkui/ui_manager.c:141
